--- a/task6/six.css
+++ b/task6/six.css
@@ -15,6 +15,7 @@
 .header{
 	height: 61px;
 }
+
 .small_red{
 	width: 110px;
 	height: 61px;
@@ -46,9 +47,16 @@
 	height: 1204px;
 }
 
-.left_big_picture{
+.left{
 	width: 641px;
 	height: 301px;
+	background: url(images/left_big_picture.jpg);
+}
+.green_png{
+	float: left;
+}
+.red_png{
+	float: right;
 }
 .right_word{
 	width: 203px;
@@ -180,15 +188,30 @@
 	height: 275px;
 	float: right;
 	margin-top: -195px;
+	background: url(images/right_picture.jpg);
 }
-.right_picture img{
-	width: 458px;
-	height: 275px;
+.right_picture div{
+	width: 457px;
+	height: 57px;
+	margin-top: 218px;
+	padding-top: 10px;
+	background: url(images/dark.png);
 }
-
+.right_picture span{
+	border-left: 2px solid #72b16a;
+	font: 26px "微软雅黑";
+	color: white;
+	margin-left: 30px;
+	padding-left:15px; 
+	margin-right:10px;
+}
+.right_picture p{
+	font: 12px "微软雅黑";
+	color: #72b16a;
+	font-style: italic;
+}
 .left_paragraph{
 	width: 415px;
-	height: 442px;
 	margin-top: 25px;
 }
 .big{
@@ -213,9 +236,8 @@
 }
 .right_paragraph{
 	width: 460px;
-	height: 294px;
 	float: right;
-	margin: -372px 0 0 400px;
+	margin: -295px 0 0 400px;
 	background: #F6EBEB;
 }
 ul{
@@ -323,5 +345,4 @@ li{
 	font: 12px "黑体";
 	color: #d45d5c;
 	float: right;
-	margin-top: -45px;
 }
